--- a/contents/css/main.css
+++ b/contents/css/main.css
@@ -7,7 +7,7 @@ body {
   font-family: 'Lora', serif;
   font-size: 21px;
   line-height: 1.52;
-  background-color: #f8f8f8;
+  background-color: #ffffff;
   text-rendering: optimizeLegibility;
 }
 
